style: update prettier to v3 and fix styles

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,6 @@
 	"useTabs": true,
 	"trailingComma": "none",
 	"plugins": ["prettier-plugin-svelte"],
-	"pluginSearchDirs": ["."],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }],
+	"singleQuote": false
 }
