--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"test:unit": "vitest run",
 		"test:unit:watch": "vitest",
 		"test:e2e": "playwright test",
-		"lint": "eslint . && prettier --check .",
+		"lint": "eslint . && prettier --check --plugin prettier-plugin-svelte .",
 		"lint:fix": "eslint --fix . && prettier --write .",
 		"prepare": "husky install"
 	},
@@ -24,8 +24,10 @@
 		"@sveltejs/kit": "^1.22.3",
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/svelte": "^3.2.2",
+		"@types/luxon": "^3.3.1",
 		"@types/testing-library__jest-dom": "^5.14.8",
 		"@types/three": "^0.152.1",
+		"@types/uuid": "^9.0.2",
 		"@typescript-eslint/eslint-plugin": "^5.62.0",
 		"@typescript-eslint/parser": "^5.62.0",
 		"@vitest/coverage-v8": "^0.32.4",
@@ -41,8 +43,8 @@
 		"jsdom": "^22.1.0",
 		"msw": "^1.2.3",
 		"postcss": "^8.4.26",
-		"prettier": "^2.8.8",
-		"prettier-plugin-svelte": "^2.10.1",
+		"prettier": "^3.0.0",
+		"prettier-plugin-svelte": "^3.0.0",
 		"svelte": "^3.59.2",
 		"svelte-check": "^3.4.6",
 		"svelte-french-toast": "^1.1.0",
@@ -60,14 +62,17 @@
 		}
 	},
 	"dependencies": {
+		"@popperjs/core": "^2.11.8",
 		"firebase": "^9.23.0",
 		"firebase-admin": "^11.10.1",
 		"gsap": "^3.12.2",
+		"luxon": "^3.3.0",
 		"svelte-icons": "^2.1.0",
 		"swiper": "^8.4.7",
 		"three": "^0.154.0",
 		"three-globe": "^2.27.4",
 		"tsafe": "^1.6.4",
+		"uuid": "^9.0.0",
 		"zod": "^3.21.4"
 	}
 }
