--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,4 @@ PUBLIC_FIREBASE_AUTH_DOMAIN=""
 PUBLIC_FIREBASE_STORAGE_BUCKET=""
 PUBLIC_FIREBASE_MESSAGING_SENDER_ID=""
 PUBLIC_FIREBASE_APP_ID=""
+PUBLIC_DEPLOY_PRIME_URL=""
