--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"postcss": "^8.4.26",
 		"prettier": "^3.0.0",
 		"prettier-plugin-svelte": "^3.0.0",
+		"puppeteer": "^20.9.0",
 		"svelte": "^3.59.2",
 		"svelte-check": "^3.4.6",
 		"svelte-french-toast": "^1.1.0",
