--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
 		"noUncheckedIndexedAccess": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"types": ["@testing-library/jest-dom", "vitest/globals"]
+		"types": ["@testing-library/jest-dom", "vitest/globals"],
 	},
 	"include": [
 		".svelte-kit/ambient.d.ts",
