feat: tests with netlify functions

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		}
 	},
 	"dependencies": {
+		"@netlify/functions": "^1.6.0",
 		"@popperjs/core": "^2.11.8",
 		"firebase": "^9.23.0",
 		"firebase-admin": "^11.10.1",
