--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,8 @@
 		"src/**/*.svelte",
 		"e2e/**/*.js",
 		"e2e/**/*.ts",
+		"netlify/functions/**/*.js",
+		"netlify/functions/**/*.ts",
 		"firebase/**/*.test.ts"
 	]
 }
