--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
 [build]
 command = "PUBLIC_DEPLOY_PRIME_URL=\"$DEPLOY_PRIME_URL\" pnpm run build"
 publish = "build"
+
+[functions."sveltekit-cron-random"]
+schedule = "@hourly"
