--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "vite dev --mode dev",
-		"build": "vite build --mode prod",
+		"build": "mkdir .netlify && echo \"* /.netlify/functions/render 200\" > .netlify/_redirects && vite build --mode prod",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -78,6 +78,9 @@
 	"pnpm": {
 		"patchedDependencies": {
 			"@sveltejs/kit@1.22.3": "patches/@sveltejs__kit@1.22.3.patch"
+		},
+		"overrides": {
+			"protobufjs@>=6.10.0 <7.2.4": ">=7.2.4"
 		}
 	}
 }
