feat: move to custom netlify adapter to support scheduled functions and 404 page

--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
 		"test:e2e": "playwright test",
 		"lint": "eslint . && prettier --check --plugin prettier-plugin-svelte .",
 		"lint:fix": "eslint --fix . && prettier --write .",
-		"prepare": "husky install"
+		"prepare": "husky install",
+		"postinstall": "cd ./submodules/kit/packages/adapter-netlify && pnpm i && pnpm build"
 	},
 	"devDependencies": {
 		"@faker-js/faker": "^8.0.2",
 		"@firebase/rules-unit-testing": "^2.0.7",
 		"@playwright/test": "^1.36.1",
-		"@sveltejs/adapter-netlify": "^2.0.8",
+		"@sveltejs/adapter-netlify": "link:./submodules/kit/packages/adapter-netlify",
 		"@sveltejs/kit": "^1.22.3",
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/svelte": "^3.2.2",
