--- a/.github/workflows/deploy-test.yaml
+++ b/.github/workflows/deploy-test.yaml
@@ -27,6 +27,8 @@ jobs:
                         });
             - name: Checkout
               uses: actions/checkout@v3
+              with:
+                  submodules: "true"
             - name: Install Node.js
               uses: actions/setup-node@v3
               with:
