feat: add xata as database

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ ZOHO_NEWSLETTER_DISTRIBUTION_LIST_ID=""
 ZOHO_REFRESH_TOKEN=""
 ZOHO_OAUTH_ID=""
 ZOHO_OAUTH_SECRET=""
+PUBLIC_DEPLOY_PRIME_URL="http://localhost:4173"
+XATA_BRANCH=""
+XATA_API_KEY=""
