--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
 		"eslint-plugin-svelte": "^2.32.3",
 		"husky": "^8.0.3",
 		"jsdom": "^22.1.0",
-		"msw": "^1.2.3",
+		"msw": "2.0.1",
 		"postcss": "^8.4.26",
 		"prettier": "^3.0.0",
 		"prettier-plugin-svelte": "^3.0.0",
