--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,6 @@ tsconfig.vitest-temp.json
 # Icon must end with two \r
 Icon
 
-
 # Thumbnails
 ._*
 
@@ -266,3 +265,5 @@ node_modules/
 
 # dotenv environment variables file
 .env
+
+src/lib/server/xata.generated.ts
