--- a/package.json
+++ b/package.json
@@ -63,11 +63,16 @@
 		}
 	},
 	"dependencies": {
+		"@auth/core": "^0.18.0",
+		"@auth/sveltekit": "^0.3.11",
+		"@auth/xata-adapter": "^0.1.3",
 		"@netlify/functions": "^1.6.0",
+		"@next-auth/xata-adapter": "^0.2.2",
 		"@popperjs/core": "^2.11.8",
 		"@xata.io/client": "^0.26.5",
 		"gsap": "^3.12.2",
 		"luxon": "^3.3.0",
+		"nodemailer": "^6.9.7",
 		"svelte-icons": "^2.1.0",
 		"swiper": "^8.4.7",
 		"three": "^0.154.0",
