--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/svelte": "^3.2.2",
 		"@types/luxon": "^3.3.1",
+		"@types/nodemailer": "^6.4.13",
 		"@types/testing-library__jest-dom": "^5.14.8",
 		"@types/three": "^0.152.1",
 		"@types/uuid": "^9.0.2",
