--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
 		"gsap": "^3.12.2",
 		"luxon": "^3.3.0",
 		"svelte-icons": "^2.1.0",
+		"svelte-markdown": "^0.2.3",
 		"swiper": "^8.4.7",
 		"three": "^0.154.0",
 		"tsafe": "^1.6.4",
