--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "worldaffairscon.org",
+	"type": "module",
 	"packageManager": "pnpm@8.6.6",
 	"version": "0.0.1",
 	"private": true,
@@ -14,7 +15,29 @@
 		"test:e2e": "playwright test",
 		"lint": "eslint . && prettier --check --plugin prettier-plugin-svelte .",
 		"lint:fix": "eslint --fix . && prettier --write .",
-		"prepare": "husky install"
+		"prepare": "husky install",
+		"email:dev": "email dev --dir src/lib/server/email/templates"
+	},
+	"dependencies": {
+		"@auth/core": "^0.18.5",
+		"@auth/sveltekit": "^0.3.16",
+		"@dicebear/collection": "^7.0.1",
+		"@dicebear/core": "^7.0.1",
+		"@netlify/functions": "^1.6.0",
+		"@popperjs/core": "^2.11.8",
+		"@react-email/components": "^0.0.11",
+		"@react-email/render": "0.0.7",
+		"gsap": "^3.12.2",
+		"luxon": "^3.3.0",
+		"nodemailer": "^6.9.7",
+		"react": "^18.2.0",
+		"react-email": "1.9.5",
+		"svelte-icons": "^2.1.0",
+		"swiper": "^8.4.7",
+		"three": "^0.154.0",
+		"tsafe": "^1.6.4",
+		"uuid": "^9.0.0",
+		"zod": "^3.21.4"
 	},
 	"devDependencies": {
 		"@faker-js/faker": "^8.0.2",
@@ -25,6 +48,7 @@
 		"@testing-library/svelte": "^3.2.2",
 		"@types/luxon": "^3.3.1",
 		"@types/nodemailer": "^6.4.13",
+		"@types/react": "^18.2.36",
 		"@types/testing-library__jest-dom": "^5.14.8",
 		"@types/three": "^0.152.1",
 		"@types/uuid": "^9.0.2",
@@ -32,6 +56,8 @@
 		"@typescript-eslint/parser": "^5.62.0",
 		"@vitest/coverage-v8": "^0.32.4",
 		"@vitest/ui": "^0.32.4",
+		"@xata.io/cli": "^0.15.4",
+		"@xata.io/client": "^0.28.3",
 		"@xata.io/netlify": "^0.1.15",
 		"autoprefixer": "^10.4.14",
 		"commitizen": "^4.3.0",
@@ -57,29 +83,10 @@
 		"vite-plugin-iso-import": "^1.0.0",
 		"vitest": "^0.32.4"
 	},
-	"type": "module",
 	"config": {
 		"commitizen": {
 			"path": "./node_modules/cz-conventional-changelog"
 		}
-	},
-	"dependencies": {
-		"@auth/core": "^0.18.0",
-		"@auth/sveltekit": "^0.3.11",
-		"@auth/xata-adapter": "^0.1.3",
-		"@netlify/functions": "^1.6.0",
-		"@next-auth/xata-adapter": "^0.2.2",
-		"@popperjs/core": "^2.11.8",
-		"@xata.io/client": "^0.26.5",
-		"gsap": "^3.12.2",
-		"luxon": "^3.3.0",
-		"nodemailer": "^6.9.7",
-		"svelte-icons": "^2.1.0",
-		"swiper": "^8.4.7",
-		"three": "^0.154.0",
-		"tsafe": "^1.6.4",
-		"uuid": "^9.0.0",
-		"zod": "^3.21.4"
 	},
 	"pnpm": {
 		"patchedDependencies": {
