--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,6 @@
 {
 	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
-		"allowJs": true,
-		"checkJs": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"resolveJsonModule": true,
@@ -20,16 +18,15 @@
 		"noUncheckedIndexedAccess": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"types": ["@testing-library/jest-dom", "vitest/globals"]
+		"types": ["@testing-library/jest-dom", "vitest/globals"],
+		"jsx": "react",
 	},
 	"include": [
 		".svelte-kit/ambient.d.ts",
 		".svelte-kit/types/**/$types.d.ts",
 		"vite.config.ts",
-		"src/**/*.js",
 		"src/**/*.ts",
 		"src/**/*.svelte",
-		"e2e/**/*.js",
 		"e2e/**/*.ts"
 	]
 }
