--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
 		"test:unit": "vitest run",
 		"test:unit:watch": "vitest",
 		"test:e2e": "playwright test",
-		"lint": "prettier --check --plugin prettier-plugin-svelte .",
-		"lint:fix": "eslint --fix . && prettier --write .",
+		"lint": "eslint src",
+		"lint:fix": "eslint --fix src && prettier --plugin prettier-plugin-svelte --write .",
 		"prepare": "husky install",
 		"email:dev": "email dev --dir src/lib/server/email/templates"
 	},
@@ -95,7 +95,7 @@
 		"three": "^0.154.0",
 		"tsafe": "^1.6.4",
 		"tslib": "^2.6.0",
-		"typescript": "5.3.3",
+		"typescript": "5.1.6",
 		"uuid": "^9.0.0",
 		"vite": "^4.4.5",
 		"vite-plugin-iso-import": "^1.0.0",
