--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
 		"@auth/sveltekit": "^0.3.16",
 		"@dicebear/collection": "^7.0.4",
 		"@dicebear/core": "^7.0.4",
+		"@fortawesome/fontawesome-svg-core": "^6.5.1",
 		"@popperjs/core": "^2.11.8",
 		"@react-email/components": "^0.0.11",
 		"@react-email/render": "0.0.7",
 		"@tailwindcss/nesting": "0.0.0-insiders.565cd3e",
+		"@xata.io/client": "^0.28.4",
 		"gsap": "^3.12.5",
 		"luxon": "^3.4.4",
 		"react": "^18.2.0",
@@ -37,7 +39,6 @@
 		"remark-parse": "^11.0.0",
 		"remark-rehype": "^11.1.0",
 		"smooth-dnd": "^0.12.1",
-		"svelte-icons": "^2.1.0",
 		"swiper": "^8.4.7",
 		"three": "^0.154.0",
 		"unified": "^11.0.4",
@@ -80,6 +81,7 @@
 		"puppeteer": "^21.9.0",
 		"svelte": "^3.59.2",
 		"svelte-check": "^3.6.3",
+		"svelte-french-toast": "^1.2.0",
 		"tailwindcss": "^3.4.1",
 		"tsafe": "^1.6.6",
 		"tslib": "^2.6.2",
