--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
 		"puppeteer": "^21.9.0",
 		"svelte": "^3.59.2",
 		"svelte-check": "^3.6.3",
+		"svelte-french-toast": "^1.2.0",
 		"tailwindcss": "^3.4.1",
 		"tsafe": "^1.6.6",
 		"tslib": "^2.6.2",
