feat: use mount to fetch json data statically for faq instead of xata

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ vite.config.ts.timestamp-*
 .netlify
 /test-results
 tsconfig.vitest-temp.json
+faqData.json
 # /static/page-previews/
 
 # General
