--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@react-email/render": "0.0.7",
 		"@tailwindcss/nesting": "0.0.0-insiders.565cd3e",
 		"@xata.io/client": "^0.28.4",
+		"dompurify": "^3.1.6",
 		"gsap": "^3.12.5",
 		"oslo": "^1.1.3",
 		"react": "^18.2.0",
@@ -53,6 +54,7 @@
 		"@sveltejs/kit": "^1.30.4",
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/svelte": "^3.2.2",
+		"@types/dompurify": "^3.0.5",
 		"@types/luxon": "^3.4.2",
 		"@types/react": "^18.2.59",
 		"@types/testing-library__jest-dom": "^5.14.9",
